[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/otherImages/BG.png" type="Texture" id=2]
[ext_resource path="res://assets/otherImages/Floor.png" type="Texture" id=3]
[ext_resource path="res://assets/scoreFont/Num.fnt" type="BitmapFont" id=4]
[ext_resource path="res://assets/otherImages/DeadLine.png" type="Texture" id=5]
[ext_resource path="res://assets/audios/创建.mp3" type="AudioStream" id=6]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hint"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="PhysicsMaterial" id=3]
bounce = 0.1

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 360, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 576 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 360, 640 )
texture = ExtResource( 2 )

[node name="DeadLine" type="Sprite" parent="."]
position = Vector2( 360, 192 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DeadLine"]
autoplay = "hint"
anims/RESET = SubResource( 7 )
anims/hint = SubResource( 8 )

[node name="SpawnPos" type="Position2D" parent="."]
position = Vector2( 360, 96 )

[node name="FruitContainer" type="Node2D" parent="."]

[node name="FXContainer" type="Node2D" parent="."]

[node name="MergeFruitContainer" type="Node2D" parent="."]

[node name="SpawnFruit" type="Sprite" parent="."]
visible = false
position = Vector2( 360, 96 )

[node name="AudioSpawn" type="AudioStreamPlayer" parent="SpawnFruit"]
stream = ExtResource( 6 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 360, 1216 )
collision_layer = 2
collision_mask = 0
physics_material_override = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Floor"]
texture = ExtResource( 3 )

[node name="Wall" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2( -17, 576 )
shape = SubResource( 4 )

[node name="Wall2" type="StaticBody2D" parent="."]
position = Vector2( 720, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2( 17, 576 )
shape = SubResource( 4 )

[node name="RandCreateTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="GameStateCheckTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="FruitExplodeTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 82.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="ScrollTimer" type="Timer" parent="ScoreLabel"]
wait_time = 0.1

[node name="UIRoot" type="CanvasLayer" parent="."]

[connection signal="timeout" from="RandCreateTimer" to="." method="_on_RandCreateTimer_timeout"]
[connection signal="timeout" from="GameStateCheckTimer" to="." method="_on_GameStateCheckTimer_timeout"]
[connection signal="timeout" from="FruitExplodeTimer" to="." method="_on_FruitExplodeTimer_timeout"]
[connection signal="timeout" from="ScoreLabel/ScrollTimer" to="." method="_on_ScrollTimer_timeout"]
